# basecamp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  plan.md  publish_crates_io.md  release_steps.md
.basecamp/: codebases.yaml  config.yaml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  logger.rs  main.rs  ui.rs
src/commands/: add.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs
tests/: cli_tests.rs  config_tests.rs
tests/common/: mod.rs
