[package]
name = "basecamp"
version = "0.1.0"
edition = "2024"
description = "A streamlined tool for managing multiple codebases and repositories"
authors = ["BaseCamp Developers"]
repository = "https://github.com/tolkee/basecamp"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "color"] }

# Configuration handling
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Git operations
git2 = "0.18"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
prettytable-rs = "0.10"

# For typo suggestions
similar = "2.2"

# File system operations
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.3"
assert_cmd = "2.0"
predicates = "3.0"
